--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "quickaid",
+  "homepage": "https://SubhaBhatta.github.io/QuickAid",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d list"
   },
   "dependencies": {
     "lucide-react": "^0.526.0",
